@@ -165,8 +165,9 @@ var
   AutoActivityDisplay: boolean = False;
   w10BitlockerSuspendOnReboot: boolean = False;
   configReverseProductOrderByUninstall: boolean = False;
-  configSupressSystemEncodingWarning : boolean = False;
-  log_rotation_count  : integer = 8;
+  configSupressSystemEncodingWarning: boolean = False;
+  log_rotation_count: integer = 8;
+  configWriteProductLogFile: boolean = False;
 
 
 implementation
@@ -203,6 +204,8 @@ begin
     myconf.WriteString('global', 'ReverseProductOrderByUninstall',
       BoolToStr(configSupressSystemEncodingWarning, False));
     myconf.WriteString('global', 'log_rotation_count', IntToStr(log_rotation_count));
+    myconf.WriteString('global', 'writeProductLogFile',
+      BoolToStr(configWriteProductLogFile, False));
     myconf.Free;
   except
     Result := False;
@@ -249,6 +252,9 @@ begin
       boolToStr(configSupressSystemEncodingWarning, False)));
     log_rotation_count := myconf.ReadInteger('global', 'log_rotation_count',
       log_rotation_count);
+    configWriteProductLogFile :=
+      strToBool(myconf.ReadString('global', 'writeProductLogFile',
+      boolToStr(configWriteProductLogFile, False)));
     myconf.Free;
 
 
@@ -492,8 +498,7 @@ begin
                           end;
                       end;
 
-                      if LowerCase(configid) =
-                        LowerCase(
+                      if LowerCase(configid) = LowerCase(
                         'opsi-script.global.ReverseProductOrderByUninstall') then
                       begin
                         if jsonAsObjectGetValueByKey(configlist.Strings[i],
@@ -506,14 +511,12 @@ begin
                               configReverseProductOrderByUninstall) then
                               osmain.startupmessages.Add(
                                 'Error: Not a Boolean:  ReverseProductOrderByUninstall: '
-                                +
-                                tmpstr);
+                                + tmpstr);
                             Result := 'readConfigFromService: ok';
                           end;
                       end;
 
-                      if LowerCase(configid) =
-                        LowerCase(
+                      if LowerCase(configid) = LowerCase(
                         'opsi-script.global.supressSystemEncodingWarning') then
                       begin
                         if jsonAsObjectGetValueByKey(configlist.Strings[i],
@@ -526,8 +529,7 @@ begin
                               configSupressSystemEncodingWarning) then
                               osmain.startupmessages.Add(
                                 'Error: Not a Boolean:  supressSystemEncodingWarning: '
-                                +
-                                tmpstr);
+                                + tmpstr);
                             Result := 'readConfigFromService: ok';
                           end;
                       end;
@@ -546,6 +548,24 @@ begin
                             if not TryStrToInt(tmpstr, log_rotation_count) then
                               osmain.startupmessages.Add(
                                 'Error: Not an Integer:  log_rotation_count: ' + tmpstr);
+                            Result := 'readConfigFromService: ok';
+                          end;
+                      end;
+
+                      if LowerCase(configid) = LowerCase(
+                        'opsi-script.global.writeProductLogFile') then
+                      begin
+                        if jsonAsObjectGetValueByKey(configlist.Strings[i],
+                          'values', values) then
+                          if jsonAsArrayGetElementByIndex(values, 0, tmpstr) then
+                          begin
+                            osmain.startupmessages.Add(
+                              'got writeProductLogFile: ' + tmpstr);
+                            if not TryStrToBool(tmpstr,
+                              configWriteProductLogFile) then
+                              osmain.startupmessages.Add(
+                                'Error: Not a Boolean:  writeProductLogFile: '
+                                + tmpstr);
                             Result := 'readConfigFromService: ok';
                           end;
                       end;
